--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
-    <groupId>net.tefaye</groupId>
+    <groupId>me.superblaubeere27</groupId>
     <artifactId>obfuscator</artifactId>
     <version>1.2</version>
 
