--- a/watermark/pom.xml
+++ b/watermark/pom.xml
@@ -2,11 +2,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>obfuscator</artifactId>
-        <groupId>me.superblaubeere27</groupId>
-        <version>1.65</version>
-    </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>watermark</artifactId>
@@ -16,12 +12,19 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>7</source>
-                    <target>7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>me.superblaubeere27</groupId>
+            <artifactId>obfuscator</artifactId>
+            <version>1.7</version>
+        </dependency>
+    </dependencies>
 
 </project>
