--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,10 @@
             <id>ASM</id>
             <url>https://repository.ow2.org/nexus/service/local/repositories/releases/content</url>
         </repository>
+        <repository>
+            <id>project-repo</id>
+            <url>file://${project.basedir}/libs</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -91,6 +95,12 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+        <!--Copyright JetBrains 2000 - 2019-->
+        <dependency>
+            <groupId>com.bulenkov</groupId>
+            <artifactId>darcula</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <!--<dependency>-->
         <!--<groupId>com.diffplug.jscriptbox</groupId>-->
