--- a/obfuscator-core/pom.xml
+++ b/obfuscator-core/pom.xml
@@ -86,6 +86,11 @@
             <version>2.8.2</version>
         </dependency>
         <dependency>
+            <groupId>com.intellij</groupId>
+            <artifactId>forms_rt</artifactId>
+            <version>7.0.3</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
