--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>me.superblaubeere27</groupId>
     <artifactId>obfuscator</artifactId>
-    <version>1.9.3</version>
+    <version>1.9.3-SNAPSHOT</version>
 
 
 
