--- a/obfuscator-annotations/pom.xml
+++ b/obfuscator-annotations/pom.xml
@@ -15,13 +15,13 @@
     <parent>
         <artifactId>obfuscator</artifactId>
         <groupId>me.superblaubeere27</groupId>
-        <version>1.9.3</version>
+        <version>1.9.3-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>obfuscator-annotations</artifactId>
-    <version>1.9.3</version>
+    <version>1.9.3-SNAPSHOT</version>
 
     <build>
         <plugins>
