Use logback for logging. Fixed some NPEs when invoking from external app

--- a/obfuscator-annotations/pom.xml
+++ b/obfuscator-annotations/pom.xml
@@ -12,22 +12,25 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>obfuscator</artifactId>
         <groupId>me.superblaubeere27</groupId>
+        <artifactId>obfuscator</artifactId>
         <version>1.9.3-SNAPSHOT</version>
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>obfuscator-annotations</artifactId>
-    <version>1.9.3-SNAPSHOT</version>
+
+    <properties>
+        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
+    </properties>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>${maven-jar-plugin.version}</version>
                 <configuration>
                     <archive>
                         <manifest>
