--- a/obfuscator-core/pom.xml
+++ b/obfuscator-core/pom.xml
@@ -12,6 +12,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>me.superblaubeere27</groupId>
         <artifactId>obfuscator</artifactId>
@@ -211,7 +212,6 @@
                         </goals>
                     </execution>
                 </executions>
-
             </plugin>
         </plugins>
     </build>
