Added logBack using slf4j. Renamed StingUtils to StringManipulationUtils to prevent conflicts with commons-lang3 (#100)
* Use logback for logging. Fixed some NPEs when invoking from external app

* Fixed poms

--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
   ~ Copyright (c) 2017-2019 superblaubeere27, Sam Sun, MarcoMC
   ~
@@ -7,12 +8,18 @@
   ~
   ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
   -->
-
-<project xmlns="http://maven.apache.org/POM/4.0.0">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <groupId>me.superblaubeere27</groupId>
+    <artifactId>obfuscator</artifactId>
+    <version>1.9.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <asm.version>7.0</asm.version>
@@ -22,11 +29,6 @@
         <module>obfuscator-annotations</module>
         <module>obfuscator-core</module>
     </modules>
-
-    <groupId>me.superblaubeere27</groupId>
-    <artifactId>obfuscator</artifactId>
-    <version>1.9.3-SNAPSHOT</version>
-
 
 
 </project>
