--- a/obfuscator-core/pom.xml
+++ b/obfuscator-core/pom.xml
@@ -12,15 +12,14 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>obfuscator</artifactId>
         <groupId>me.superblaubeere27</groupId>
+        <artifactId>obfuscator</artifactId>
         <version>1.9.3-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>obfuscator-core</artifactId>
-    <version>1.9.3-SNAPSHOT</version>
 
     <repositories>
         <repository>
@@ -32,8 +31,39 @@
             <url>file://${parent.basedir}/libs</url>
         </repository>
     </repositories>
+    <properties>
+        <lombok.version>1.18.16</lombok.version>
+        <slf4j-api.version>1.7.30</slf4j-api.version>
+        <logback-classic.version>1.2.3</logback-classic.version>
+        <guava.version>26.0-jre</guava.version>
+        <rsyntaxtextarea.version>2.6.1</rsyntaxtextarea.version>
+        <jopt-simple.version>5.0.4</jopt-simple.version>
+        <gson.version>2.8.2</gson.version>
+        <forms_rt.version>7.0.3</forms_rt.version>
+        <junit.version>4.13.1</junit.version>
+        <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
+        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
+        <jcp.version>6.1.4</jcp.version>
+        <commons-lang3.version>3.11</commons-lang3.version>
+    </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback-classic.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm</artifactId>
@@ -63,37 +93,41 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>26.0-jre</version>
+            <version>${guava.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.fifesoft</groupId>
             <artifactId>rsyntaxtextarea</artifactId>
-            <version>2.6.1</version>
+            <version>${rsyntaxtextarea.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/biz.aQute/bndlib -->
 
         <dependency>
             <groupId>net.sf.jopt-simple</groupId>
             <artifactId>jopt-simple</artifactId>
-            <version>5.0.4</version>
+            <version>${jopt-simple.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.2</version>
+            <version>${gson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.intellij</groupId>
             <artifactId>forms_rt</artifactId>
-            <version>7.0.3</version>
+            <version>${forms_rt.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.1</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <!--Copyright JetBrains 2000 - 2019-->
@@ -105,7 +139,7 @@
         <dependency>
             <groupId>me.superblaubeere27</groupId>
             <artifactId>obfuscator-annotations</artifactId>
-            <version>1.9.3-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <!--<dependency>-->
         <!--<groupId>com.diffplug.jscriptbox</groupId>-->
@@ -120,7 +154,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>${maven-shade-plugin.version}</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -141,6 +175,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>${maven-jar-plugin.version}</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -153,7 +188,7 @@
             <plugin>
                 <groupId>com.igormaznitsa</groupId>
                 <artifactId>jcp</artifactId>
-                <version>6.1.4</version>
+                <version>${jcp.version}</version>
                 <configuration>
                     <globalVars>
                         <property>
@@ -177,7 +212,6 @@
                         </goals>
                     </execution>
                 </executions>
-
             </plugin>
         </plugins>
     </build>
