--- a/obfuscator-core/pom.xml
+++ b/obfuscator-core/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>me.superblaubeere27</groupId>
         <artifactId>obfuscator</artifactId>
-        <version>1.9.3-SNAPSHOT</version>
+        <version>1.9.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>obfuscator-core</artifactId>
@@ -32,21 +32,29 @@
         </repository>
     </repositories>
     <properties>
-        <lombok.version>1.18.16</lombok.version>
-        <slf4j-api.version>1.7.30</slf4j-api.version>
-        <logback-classic.version>1.2.3</logback-classic.version>
-        <guava.version>29.0-jre</guava.version>
-        <rsyntaxtextarea.version>2.6.1</rsyntaxtextarea.version>
+        <lombok.version>1.18.22</lombok.version>
+        <slf4j-api.version>1.7.32</slf4j-api.version>
+        <logback-classic.version>1.2.7</logback-classic.version>
+        <guava.version>31.0.1-jre</guava.version>
+        <rsyntaxtextarea.version>3.1.3</rsyntaxtextarea.version>
         <jopt-simple.version>5.0.4</jopt-simple.version>
-        <gson.version>2.8.2</gson.version>
+        <gson.version>2.8.9</gson.version>
         <forms_rt.version>7.0.3</forms_rt.version>
-        <junit.version>4.13.1</junit.version>
-        <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
+        <junit.version>4.13.2</junit.version>
+        <maven-shade-plugin.version>3.3.0-SNAPSHOT</maven-shade-plugin.version>
         <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
         <jcp.version>6.1.4</jcp.version>
-        <commons-lang3.version>3.11</commons-lang3.version>
-        <nashorn.version>15.2</nashorn.version>
+        <commons-lang3.version>3.12.0</commons-lang3.version>
+        <nashorn.version>15.3</nashorn.version>
     </properties>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>maven-snapshots</id>
+            <url>https://repository.apache.org/content/repositories/snapshots/</url>
+        </pluginRepository>
+    </pluginRepositories>
+
 
     <dependencies>
         <dependency>
@@ -219,6 +227,28 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
